--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,7 @@ jobs:
         npm install
         echo '[env:custom_build]' >>platformio.ini
         echo 'extends = env:esp32_16MB_M' >>platformio.ini
-        echo 'build_flags = ${env:esp32_16MB_M.build_flags} -D WLED_MAX_BUTTONS=15 -D CLIENT_SSID='\''"Theion"'\'' -D CLIENT_PASS='\''"LgCKt4o6iGH9"'\'' -D USERMOD_FOUR_LINE_DISPLAY -D USERMOD_ROTARY_ENCODER_UI -D USERMOD_MODE_SORT -D USE_ALT_DISPlAY' >>platformio.ini
+        echo 'build_flags = ${env:esp32_16MB_M.build_flags} -D WLED_MAX_BUTTONS=15 -D USERMOD_FOUR_LINE_DISPLAY -D USERMOD_ROTARY_ENCODER_UI -D USERMOD_MODE_SORT -D USE_ALT_DISPlAY' >>platformio.ini
         echo 'lib_deps = ' >>platformio.ini
         echo '  ${env:esp32_16MB_M.lib_deps}' >>platformio.ini
         echo '  olikraus/U8g2 @ ^2.28.8' >>platformio.ini
@@ -56,3 +56,4 @@ jobs:
         git add $GITHUB_WORKSPACE/last_update_date.txt
         git commit -m "Commit Custom Build"
         git push origin main
+
